Add autofill option

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -5,5 +5,5 @@ module_desc = "A REDCap external module providing action tags that allow filling
 module_docs = "README.md"
 config_jsdebug = "Output debug information to the browser console"
 ; Widget labels
-widget_label = "Autofill"
+widget_autofilllabel = "Autofill"
 widget_clearlabel = "Reset"
