--- a/lang/English.ini
+++ b/lang/English.ini
@@ -7,3 +7,4 @@ config_jsdebug = "Output debug information to the browser console"
 ; Widget labels
 widget_autofilllabel = "Autofill"
 widget_clearlabel = "Reset"
+invalid_parameters = "Autofill: Invalid parameters in field '{0}'."
