Add error indicators

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -4,6 +4,7 @@ module_name = "Autofill"
 module_desc = "A REDCap external module providing action tags that allow filling of empty fields with default values."
 module_docs = "README.md"
 config_jsdebug = "Output debug information to the browser console"
+config_errors = "Show autofill configuration errors on data entry and survey pages"
 ; Widget labels
 widget_autofilllabel = "Autofill"
 widget_clearlabel = "Reset"
