Autotab and Nextfocus

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -8,4 +8,6 @@ config_errors = "Show autofill configuration errors on data entry and survey pag
 ; Widget labels
 widget_autofilllabel = "Autofill"
 widget_clearlabel = "Reset"
+; Errors
 invalid_parameters = "Autofill: Invalid parameters in field '{0}'."
+invalid_for_tab = "Autofill: Invalid use of {0} in field '{1}'. It is only supported on fields of type 'Dropdown'."
