--- a/lang/English.ini
+++ b/lang/English.ini
@@ -42,7 +42,7 @@ The full list of supported parameters (all optional) is:<ul>
 <li><code>autofillStyle</code>: CSS style that is output in the button's style attribute (default: empty).</li>
 <li><code>autofillClass</code>: Class names (space-delimited) to be added to the button (default: empty).</li>
 <li><code>clear</code>: When set to </code>true</code>, adds a <i>Clear</i> button that will reset all affected fields (default: </code>false</code>).</li>
-<li><code>clearLabel</code>: The label of the clear button (supports HTML)  (default: <i>Clear</i>).</li>
+<li><code>clearLabel</code>: The label of the clear button (supports HTML)  (default: <i>Reset</i>).</li>
 <li><code>clearStyle</code>: CSS style that is output in the button's style attribute (default: empty).</li>
 <li><code>clearClass</code>: Class names (space-delimited) to be added to the button (default: empty).</li>
 <li><code>delimiter</code>: The delimiter between the <i>Autofill</i> and <i>Clear</i> buttons (supports HTML) (default: space).</li>
